--- a/assets/scss/global/_general.scss
+++ b/assets/scss/global/_general.scss
@@ -31,12 +31,12 @@ button{
   outline: none;
 }
 
-#main-container {
+.main-container {
   margin: 0 auto;
 }
 
 @media only screen and (min-width: 320px) {
-  #main-container {
+  .main-container {
     max-width: 300px;
     padding: 10px 10px;
   }
@@ -48,7 +48,7 @@ button{
   }
 }
 @media only screen and (min-width: 360px) {
-  #main-container {
+  .main-container {
     max-width: 340px;
     padding: 10px 15px;
   }
@@ -60,7 +60,7 @@ button{
   }
 }
 @media only screen and (min-width: 600px) {
-  #main-container {
+  .main-container {
     max-width: 540px;
     padding: 25px 20px;
   }
@@ -72,7 +72,7 @@ button{
   }
 }
 @media only screen and (min-width: 960px) {
-  #main-container {
+  .main-container {
      max-width: 930px;
      padding: 30px 20px;
  }
@@ -84,7 +84,7 @@ button{
   }
 }
 @media only screen and (min-width: 1264px) {
-  #main-container {
+  .main-container {
     max-width: 1100px;
     padding: 50px 40px;
  }
